[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "v3.12.4"
django = "^5.0.7"
django-mdeditor = "^0.1.20"
pillow = "^10.4.0"
django-imagefield = "^0.19.0"
django-cleanup = "^8.1.0"
strawberry-graphql = "^0.237.3"
strawberry-graphql-django = "^0.47.1"
autopep8 = "^2.3.1"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format.shell = "find -type f -name '*.py' ! -path '*/migrations/*' -exec autopep8 -i -a '{}' \\;"
out = "poetry show -o"
check = "python manage.py check"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
runserver = "python manage.py runserver"
dev.sequence = ["makemigrations", "migrate", "runserver"]
process_imagefields = "python manage.py process_imagefields --all"
